examples/test/testpolicy15198.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15198
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key1: value35
      key42: value49
      key33: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value2
          key25: value17
          key3: value29
      podSelector:
        matchLabels:
          key29: value7
          key7: value22
